# htsget-aws

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  package-lock.json  package.json  serverless.yml  template.yml
.cargo/: config
cli/: Cargo.toml
cli/src/: main.rs
deploy/: app.py
docker/: docker-compose.yml
htsget-rs/: Cargo.toml
htsget-rs/aws/src/reads/: Cargo.toml
htsget-rs/src/: Cargo.toml  lib.rs
htsget-rs/src/client/: Cargo.toml  main.rs
htsget-rs/src/reads/: Cargo.toml  main.rs
htsget-rs/src/server/: Cargo.toml  htsget_spec.rs
htsget-rs/tests/: htsget_spec.rs
reads/: Cargo.toml  build.rs
reads/src/: lib.rs  main.rs
src/: lib.rs  main.rs  query.rs
src/aws/: athena.rs  mod.rs
src/data/: athena.rs  errors.rs  htslib.rs  local.rs  mod.rs
tests/: Cargo.toml  htsget_spec_test.rs  reads_api_test.rs
tests/rest/: apigw_proxy_request.json  basic_reads_query.json  htsget_spec_response.json
variants/: Cargo.toml
