[package]
name = "htsget"
version = "0.1.0"
edition = "2018"

# XXX: interferes with lambdas?
# [[bin]]
# name = "hstget"
# doc = false

# [patch.crates-io]
# rusoto_core = { git = 'https://github.com/hhatto/rusoto/', branch = 'improve-parse-error-message-on-other-service', default_features = false, features=["rustls"] }

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
serde_json = "1.0.40"
env_logger = "0.6.2"
dotenv_codegen = "0.14.1"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
futures = { version = "0.1.29" }
#futures-preview = { version = "=0.3.0-alpha.17", features = ["compat", "async-await", "nightly"] }
# tokio-core = { version = "0.1.17" }
tokio = "0.1.22"
snafu = "0.5.0"

# Just barebones clap, no coloring, etc...
clap = { default-features = false, version = "2.33.0"}

# https://www.rusoto.org/lambdas.html
# """
# The rustls option must be set on the project's Cargo.toml 
# file for both the rusoto_core crate and any Rusoto service 
# crates used" "rustls" is required for all lambdas
# """
rusoto_athena = { default_features = false, features=["rustls"], version = "0.41.0" }
rusoto_core = { default_features = false, features=["rustls"], version = "0.41.0" }