[package]
name = "htsget"
version = "0.1.0"
edition = "2018"

# XXX: interferes with lambdas?
# [[bin]]
# name = "hstget"
# doc = false

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
serde_json = "1.0.44"
env_logger = "0.7.1"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
futures = "0.3.1"
tokio = "0.2.9"
snafu = "0.6.2"
rust-htslib = "0.26.1"

# Just barebones clap, no coloring, etc...
clap = { default-features = false, version = "2.33.0"}

# https://www.rusoto.org/lambdas.html
# """
# The rustls option must be set on the project's Cargo.toml 
# file for both the rusoto_core crate and any Rusoto service 
# crates used" "rustls" is required for all lambdas
# """
rusoto_core = { default_features = false, features=["rustls"], version = "0.41.0" }