[package]
name = "cli"
version = "0.1.0"
edition = "2018"
autobins = false
default-run = "htsget"

[dependencies]
# Just barebones clap, no coloring, etc...
clap = { default-features = false, version = "2.33.0"}

[dev-dependencies]
httpmock = "0.4.5"
reqwest = { version = "0.10", features = ["json"] }

[[bin]]
name = "htsget"
path = "src/main.rs"