[package]
name = "htsget-rs"
version = "0.2.0"
edition = "2018"

[dependencies]
noodles-bam = { git = "https://github.com/zaeleus/noodles" }
lambda_runtime = { version = "0.3.0" }
lambda_http = { version = "0.3.0" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
url = "2.2.1"
tokio = "1.4.0"

# Just barebones clap, no coloring, etc...
clap = { default-features = false, version = "2.33.3"}
httpmock = "0.5.7"
isahc = "1.2.0"

[[bin]]
name = "bootstrap"
path = "src/bin/reads.rs"

#[[bin]]
#name = "variants"
#path = "src/variants/main.rs"
