[package]
name = "reads"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.7.1"
lambda_runtime = "0.2.1"
lambda_http = { version = "0.1.1", git = "https://github.com/awslabs/aws-lambda-rust-runtime.git", branch = "master" }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
bio_index_formats = { version = "0.1.1", git = "https://github.com/brainstorm/bio-index-formats" }
rust-htslib = { path= "../../rust-htslib" }
url = "2.1.1"

tokio = { version = "0.2.19", features = ["full"] }
tokio-codec = "0.2.0-alpha.6"
tokio-io = "0.2.0-alpha.6"
futures = "0.3.4"
bytes = "0.5.4"
time = "0.2.11" # circumvents future_utils compilation fail for now

rusoto_core = { default_features = false, features=["rustls"], git = "https://github.com/rusoto/rusoto", branch="master" }
rusoto_s3 = { default_features = false, features=["rustls"], git = "https://github.com/rusoto/rusoto", branch="master" }